# scripts

./: .gitignore  .hgtags  LICENSE  LICENSE.md  README.md
bazel/: BUILD.bazel  README.md  WORKSPACE  workspace_versions.bzl
bazel/bazel_compatibility/: BUILD.bazel  README.md  bazel_compatibility.kts  bazel_compatibility_utils.kt  bazel_compatibility_utils_test.kt  test_version.kts
